DGC-273: Contrast Issues addressed in main menu.

--- a/docroot/themes/custom/twentyeighteen/sass/components/navigation/_main-menu.scss
+++ b/docroot/themes/custom/twentyeighteen/sass/components/navigation/_main-menu.scss
@@ -156,7 +156,7 @@ input[type="checkbox"] + label.toggle::before {
 
   a {
     display: block;
-    color: $med-gray;
+    color: rgba(255, 255, 255, 0.75);
     font-size: 1em;
     font-weight: 700;
     padding: 0.5em 1.5em;
@@ -167,7 +167,14 @@ input[type="checkbox"] + label.toggle::before {
   }
 
   a:hover {
-    color: $med-gray;
+    color: rgba(254, 236, 137, 0.75);
+    text-shadow: 0 0 0.25em rgba(0, 0, 0, 0.75);
+    text-decoration: none;
+  }
+
+  a.is-active {
+    color: rgba(255, 255, 255, 1);
+    text-shadow: 0 0 0.25em rgba(0, 0, 0, 0.75);
     text-decoration: none;
   }
 }
